Fix keyboard event suppression due to wonky DOM activeElement semantics. Never show a scrollbar in the demos since that suppresses events for arrow keys. Slight perf improvement to overload dispatch and method signature invocation.

--- a/jsil.org/demos/Lumberjack/lumberjack.css
+++ b/jsil.org/demos/Lumberjack/lumberjack.css
@@ -5,8 +5,6 @@ html {
 body {
 	background-color: black;
 	color: white;
-	overflow-x: hidden;
-	overflow-y: auto;
 	margin: 0px;
 	padding: 0px;
 }
